N-panel problem with old version files #98925

Closed
opened 2022-06-16 09:27:08 +02:00 by Serge Lyatin · 20 comments

System Information
Operating system: win10 64 bit
Graphics card: 1050ti

Blender Version
Broken: 3.2.0 Stable, date_2022-06-08 10:22, hash_e05e1e369187
Worked: 3.2.0 Alpha, date_2022-03-31 17:14, hash_42853bacc973

The behavior changed in 277fa2f441

Short description of error
File created in older version misses N-panel for Layout working area when opened in recent builds. Even pressing N doesn't retrieve it back, but in Modeling working area it works fine. Also there is strange overlaying for T-panel in Shader Editor.

Exact steps for others to reproduce the error

  • In Blender 3.1: Start with General template
  • Change 3D Viewport to Sequencer and back to 3D Viewport
  • Save file and open it Blender 3.2
  • Try to open side panel

interface_issue_old.jpg interface_issue_new.jpg
interface_issue.blend

**System Information** Operating system: win10 64 bit Graphics card: 1050ti **Blender Version** Broken: 3.2.0 Stable, date_2022-06-08 10:22, hash_e05e1e369187 Worked: 3.2.0 Alpha, date_2022-03-31 17:14, hash_42853bacc973 The behavior changed in 277fa2f441 **Short description of error** File created in older version misses *N-panel* for *Layout* working area when opened in recent builds. Even pressing *N* doesn't retrieve it back, but in *Modeling* working area it works fine. Also there is strange overlaying for *T-panel* in *Shader Editor*. **Exact steps for others to reproduce the error** - In Blender 3.1: Start with General template - Change 3D Viewport to Sequencer and back to 3D Viewport - Save file and open it Blender 3.2 - Try to open side panel ![interface_issue_old.jpg](https://archive.blender.org/developer/F13173025/interface_issue_old.jpg) ![interface_issue_new.jpg](https://archive.blender.org/developer/F13173027/interface_issue_new.jpg) [interface_issue.blend](https://archive.blender.org/developer/F13173031/interface_issue.blend)
Author

Added subscriber: @SergeL

Added subscriber: @SergeL

#98999 was marked as duplicate of this issue

#98999 was marked as duplicate of this issue
Author
No description provided.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check
Member

Added subscriber: @iss

Added subscriber: @iss
Member

I am getting this on the example file

Error, region type 2 missing in - name:"View3D", id:1
Error, region type 2 missing in - name:"View3D", id:1
Error, region type 2 missing in - name:"Node", id:16

Region type 2 is RGN_TYPE_CHANNELS
@SergeL : Not sure how that region ended up in View3D or the Node Editor?

The behavior changed in 277fa2f441 btw.
Guess one question is: can we reproduce this from scratch?

@iss: got an explanation for this

I am getting this on the example file ``` Error, region type 2 missing in - name:"View3D", id:1 Error, region type 2 missing in - name:"View3D", id:1 Error, region type 2 missing in - name:"Node", id:16 ``` Region type 2 is `RGN_TYPE_CHANNELS` @SergeL : Not sure how that region ended up in View3D or the Node Editor? The behavior changed in 277fa2f441 btw. Guess one question is: can we reproduce this from scratch? @iss: got an explanation for this

I have no idea how this could happen. It seems to thhink there is sequencer data and so it adds channel region. I am not sure what is best way to investigate area in particular. Will try to simplify layout and workspaces and iterate over elements.

I have no idea how this could happen. It seems to thhink there is sequencer data and so it adds channel region. I am not sure what is best way to investigate area in particular. Will try to simplify layout and workspaces and iterate over elements.

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

I have noticed, that opening file with version 3.1 and saving file fixed this issue - strange as file would go through versioning anyway. Then I opened file with version 3.0.1 and it says, that file is written with newer version - sub 43, but release subversion is 42.

@SergeL can you explain, how this file was created? Did you use any unofficial builds like UPBGE?

I have noticed, that opening file with version 3.1 and saving file fixed this issue - strange as file would go through versioning anyway. Then I opened file with version 3.0.1 and it says, that file is written with newer version - sub 43, but release subversion is 42. @SergeL can you explain, how this file was created? Did you use any unofficial builds like UPBGE?
Author

After investigating my Blender versions (all of them are official daily builds), I guess it is startup file which was copy-pasted from version to version. Here it is originally founded in 2.93 folder: startup.blend
Then it was transferred to mentioned 3.2.0 builds and overwritten.

After investigating my Blender versions (all of them are official daily builds), I guess it is startup file which was copy-pasted from version to version. Here it is originally founded in 2.93 folder: [startup.blend](https://archive.blender.org/developer/F13174503/startup.blend) Then it was transferred to mentioned 3.2.0 builds and overwritten.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Interesting, When I investigate original file, bmain->versionfile is 302 and bmain->subversionfile is 8. Yet older version seems to report this incorrectly. I guess this is different issue anyway...

#98925.blend

In any case, I have simplified the file (above) to remove all workspaces and areas apart from one that is problematic. Then checked .blend data and I saw 1 ScrArea, which is expected and inside this area there were 3 spaces (SpaceLink): Node editor, 3D view and Sequencer.

List of regions: RGN_TYPE_HEADER, RGN_TYPE_TOOL_HEADER, RGN_TYPE_UI, RGN_TYPE_TOOLS, RGN_TYPE_PREVIEW, RGN_TYPE_WINDOW

RGN_TYPE_PREVIEW is very suspicious there - nodes or 3D view does not have one. My guess would be that this was sequencer at some point and it was switched to other editors which somehow failed to clean up their data. But still not sure how to reproduce this. will re-confirm for now

Interesting, When I investigate original file, `bmain->versionfile` is 302 and `bmain->subversionfile` is 8. Yet older version seems to report this incorrectly. I guess this is different issue anyway... [#98925.blend](https://archive.blender.org/developer/F13177796/T98925.blend) In any case, I have simplified the file (above) to remove all workspaces and areas apart from one that is problematic. Then checked .blend data and I saw 1 `ScrArea`, which is expected and inside this area there were 3 spaces (`SpaceLink`): Node editor, 3D view and Sequencer. List of regions: `RGN_TYPE_HEADER`, `RGN_TYPE_TOOL_HEADER`, `RGN_TYPE_UI`, `RGN_TYPE_TOOLS`, `RGN_TYPE_PREVIEW`, `RGN_TYPE_WINDOW` `RGN_TYPE_PREVIEW` is very suspicious there - nodes or 3D view does not have one. My guess would be that this was sequencer at some point and it was switched to other editors which somehow failed to clean up their data. But still not sure how to reproduce this. will re-confirm for now
Member

Added subscribers: @Swifter, @PratikPB2123

Added subscribers: @Swifter, @PratikPB2123

Since this is not rare issue and produces broken .blend files, setting to high prio

Since this is not rare issue and produces broken .blend files, setting to high prio
Richard Antalik was assigned by Pratik Borhade 2022-06-21 17:24:26 +02:00

Added subscriber: @Wovchick

Added subscriber: @Wovchick

This issue was referenced by a66bc632ab

This issue was referenced by a66bc632ab3d2d587796f1bb6032353963e396f5

This issue was referenced by e08c932482

This issue was referenced by e08c9324823b24168cdf278c5c9b7ec519335112

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98925
No description provided.